@@ -7,9 +7,7 @@
 
 package org.elasticsearch.xpack.logsdb;
 
-import com.carrotsearch.randomizedtesting.annotations.ParametersFactory;
-
-import java.util.Arrays;
+import java.util.List;
 
 public class TextRollingUpgradeIT extends AbstractStringTypeLogsdbRollingUpgradeTestCase {
 
@@ -86,17 +84,15 @@ public class TextRollingUpgradeIT extends AbstractStringTypeLogsdbRollingUpgrade
             }
         }""";
 
-    public TextRollingUpgradeIT(String template, String testScenario) {
-        super(DATA_STREAM_NAME_PREFIX + "." + testScenario, template);
-    }
-
-    @ParametersFactory
-    public static Iterable<Object[]> data() {
-        return Arrays.asList(
-            new Object[][] {
-                { TEMPLATE, "basic" },
-                { TEMPLATE_WITH_MULTI_FIELD, "with-keyword-multi-field" },
-                { TEMPLATE_WITH_MULTI_FIELD_AND_IGNORE_ABOVE, "with-keyword-multi-field-and-ignore-above" } }
+    @Override
+    protected List<TemplateConfig> getTemplates() {
+        return List.of(
+            new TemplateConfig(DATA_STREAM_NAME_PREFIX + ".basic", TEMPLATE),
+            new TemplateConfig(DATA_STREAM_NAME_PREFIX + ".with-keyword-multi-field", TEMPLATE_WITH_MULTI_FIELD),
+            new TemplateConfig(
+                DATA_STREAM_NAME_PREFIX + ".with-keyword-multi-field-and-ignore-above",
+                TEMPLATE_WITH_MULTI_FIELD_AND_IGNORE_ABOVE
+            )
         );
     }
 
